src/test/ui/lub-glb/old-lub-glb-object.nll.stderr
error[E0308]: mismatched types
  --> $DIR/old-lub-glb-object.rs:10:14
   |
LL |         _ => y,
   |              ^ one type is more general than the other
   |
   = note: expected trait object `dyn for<'r, 's> Foo<&'r u8, &'s u8>`
              found trait object `dyn for<'r> Foo<&'r u8, &'r u8>`

error[E0308]: mismatched types
  --> $DIR/old-lub-glb-object.rs:10:14
   |
LL |         _ => y,
   |              ^ one type is more general than the other
   |
   = note: expected trait object `dyn for<'r, 's> Foo<&'r u8, &'s u8>`
              found trait object `dyn for<'r> Foo<&'r u8, &'r u8>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
